--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.graalvm.buildtools</groupId>
+				<artifactId>native-maven-plugin</artifactId>
+			</plugin>
+
 		</plugins>
 	</build>
 
