Workaroud #2 - Temporary patch for speeding up liquibase getLocalhost during boot up
Liquibase utils getLocalhostName as taking 10s. It is reported in a few github issues. Unfortunately at the moment it is only patched for the Mac books.

Currently working around it for ubuntu like.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=trainticket
+spring.h2.console.enabled=true
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/trainticket-db.xml
